Made some customizations.

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -7,16 +7,16 @@
 						<li><a href="<%- theme.menu[i] %>"><%= i %></a></li>
                     <% } %>
 
-					<%- partial('post/blogroll') %> 
+					<!--%- partial('post/blogroll') %> 
 
-                    <li> <a href="/atom.xml">Rss</a> </li>
+                    <li> <a href="/atom.xml">Rss</a> </li-->
                 </ol>
             </div>
         </li>
     </ul>
 
-    <h2>
+    <h1>
         <a href="<%- config.root %>"><%= config.title %></a> 
-    </h2>
+    </h1>
     <h5 class="text-muted"><% if (config.subtitle){ %> <%= config.subtitle %> <% } %> </h5>
 </div>
