--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -89,7 +89,7 @@ article
 
   .header
     border-left 3px solid color-meta
-    margin 20px 0 10px
+    margin 25px 0 20px
     padding 0 0 0 13px
     text-align left
 
@@ -101,7 +101,7 @@ article
       line-height 1
 
     .title
-      font-weight normal
+      font-weight bold
       a
         color color-font
         &:hover
@@ -109,9 +109,9 @@ article
           text-decoration none
 
     .title_link
-      font-weight normal
+      font-weight bold
       a
-        color color-link
+        color color-font
         &:hover
           color color-link
           text-decoration none
@@ -120,18 +120,23 @@ article
   .entry
     text-align justify
     line-height 1.6
-    p, blockquote, ul, ol, dl, table, iframe, h3, h4, h5, h6, .video-container
+    p, blockquote, ul, ol, dl, table, iframe, .video-container
       margin-top 10px
+    h3, h4, h5, h6
+      margin-top 25px
+      margin-bottom 20px
 
     //引用
     blockquote
-      border-top 1px solid color-border
-      border-bottom 1px solid color-border
-      font-style italic
-      font-family font-serif
-      font-size 1.2em
+      //border-top 1px solid color-border
+      //border-bottom 1px solid color-border
+      //font-style italic
+      //font-family font-serif
+      //font-size 1.2em
+      font-size 14px
+      color color-quote
       padding 0 30px 15px
-      text-align center
+      //text-align center
       footer
         border-top none
         font-size 0.8em
