--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -1,10 +1,10 @@
 // Color
-color-background = #eee
+color-background = #fff
 color-font = #444
 color-meta = #999
+color-quote = #777
 color-border = #ddd
-//color-link = #258fb8
-color-link = #0E83CD
+color-link = #258fb8
 
 // Font
 font-default = "Helvetica Neue", "Helvetica", Arial, sans-serif
@@ -12,7 +12,7 @@ font-serif = "Georgia", serif
 font-mono = Monaco, Menlo, Consolas, Courier New, monospace
 font-title = "Lato", Helvetica Neue, Helvetica, Arial, sans-serif
 
-//@import url("//fonts.googleapis.com/css?family=Lato:400,400italic")
+//@import url(//fonts.googleapis.com/css?family=Lato:400,400italic)
 
 font-icon = FontAwesome
 font-icon-path = 'font/fontawesome-webfont'
@@ -25,11 +25,4 @@ font-icon-path = 'font/fontawesome-webfont'
 }
 
 // Width
-//page-width = 1200px
-
-
-//@font-face {
-//  font-family: 'Glyphicons Halflings';
-//  src: url('font/glyphicons-halflings-regular.eot');
-//  src: url('font/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('font/glyphicons-halflings-regular.woff') format('woff'), url('font/glyphicons-halflings-regular.ttf') format('truetype'), url('font/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-//}
+page-width = 1200px
