--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -2,13 +2,13 @@
   text-shadow 0 0 1px #fff
   margin 50px auto
   a
-    color #999
+    color color-link
     &:hover
       color color-link
       text-decoration none
     
   h1
-    font-weight normal
+    font-weight bold
     font-size 2.5em
     line-height 1
 
