--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -122,7 +122,7 @@ article
     line-height 1.6
     p, blockquote, ul, ol, dl, table, iframe, .video-container
       margin-top 10px
-    h3, h4, h5, h6
+    h1, h2, h3, h4, h5, h6
       margin-top 25px
       margin-bottom 20px
 
@@ -176,7 +176,7 @@ article
       margin-top 20px
 
     h3, h4, h5, h6
-      font-weight normal
+      font-weight bold
 
     img, video
       max-width 100%
