Add GitHub footer.

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -4,6 +4,6 @@
   <% } else { %>
 	  <%= new Date().getFullYear() %> &copy; <%= config.title %>,
   <% } %>
-  All rights reserved. Powered by <%- link_to("http://zespia.tw/hexo/", "Hexo") %>.
+  All rights reserved. Powered by <%- link_to("http://zespia.tw/hexo/", "Hexo") %>. Hosted on <%- link_to("https://github.com/HugoFeng/hugofeng.github.io", "GitHub") %>.
 </div>
 <div class="clearfix"></div>
