--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -7,9 +7,9 @@
 						<li><a href="<%- theme.menu[i] %>"><%= i %></a></li>
                     <% } %>
 
-					<!--%- partial('post/blogroll') %> 
+					<!--%- partial('post/blogroll') %--> 
 
-                    <li> <a href="/atom.xml">Rss</a> </li-->
+                    <li> <a href="/atom.xml">Rss</a> </li>
                 </ol>
             </div>
         </li>
